--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,10 +31,10 @@ dependencies:
   flutter:
     sdk: flutter
     
-  firebase_core: ^2.32.0 
-  firebase_auth: ^4.20.0
-  cloud_firestore: ^4.15.9
-  google_sign_in: ^6.2.1
+  firebase_core: ^4.1.1 
+  firebase_auth: ^6.1.0
+  cloud_firestore: ^6.0.2
+  google_sign_in: ^7.2.0
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
@@ -42,6 +42,8 @@ dependencies:
   flutter_svg: ^2.0.10+1
   shared_preferences: ^2.2.2
   provider: ^6.1.2
+  getwidget: ^7.0.0
+  introduction_screen: ^4.0.0
 
 dev_dependencies:
   flutter_test:
@@ -52,7 +54,7 @@ dev_dependencies:
   # activated in the `analysis_options.yaml` file located at the root of your
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
-  flutter_lints: ^5.0.0
+  flutter_lints: ^6.0.0
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
@@ -67,6 +69,7 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
     - assets/images/
+    - assets/data/
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/to/resolution-aware-images
